Sat Dec  6 06:14:23 2014  Vit Ondruch  <vondruch@redhat.com>

	* configure.in (RUBY_LIB_VERSION): Fix --with-ruby-version
	  configuration option.  get rid of quoting in config.status.

	* template/verconf.h.tmpl: quote RUBY_LIB_VERSION here.
	  [ruby-core:66724] [Bug #10572]

Sat Dec  6 04:33:52 2014  NAKAMURA Usaku  <usa@ruby-lang.org>

	* lib/pp.rb (File::Stat#pritty_print): some platforms (such as Windows)
	  does not have major/minor parts of device.

Fri Dec  5 22:43:04 2014  SHIBATA Hiroshi  <shibata.hiroshi@gmail.com>

	* ext/psych/lib/psych.rb: bump version to 2.0.8
	* ext/psych/psych.gemspec: ditto.
	* ext/psych/psych_emitter.c: ditto.
	* ext/psych/psych_parser.c: ditto.

Fri Dec  5 17:09:09 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/option.c (inet_ntop): link aliased inet_ntop in
	  libruby on mswin not rb_w32_inet_ntop which fails to link for
	  unknown reason.

Fri Dec  5 11:09:54 2014  Eric Wong  <e@80x24.org>

	* iseq.c (prepare_iseq_build): remove unused block_opt param
	  (rb_iseq_new_with_bopt_and_opt): remove
	  (rb_iseq_new_with_opt): inline removed function
	  (rb_iseq_new_with_bopt): remove
	  (iseq_load): adjust prepare_iseq_build call
	  [Feature #10565]

Fri Dec  5 09:46:05 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (parser_yylex): fix lex_state after tLABEL_END, should
	  be EXPR_LABELARG to be followed by "paren with arg".
	  [ruby-core:66705] [Feature #4935]

Fri Dec  5 02:27:47 2014  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/extmk.rb: as all extension objects including initializations
	  of ext and enc should be linked to libruby if enable-shared,
	  EXTOBJS should not be linked to main programs.
	  [ruby-core:66675] [Bug #10566]

Thu Dec  4 07:06:02 2014  Eric Wong  <e@80x24.org>

	* compile.c (rb_iseq_build_from_exception): entry->sp is unsigned
	  (iseq_build_callinfo_from_hash): account for kw_arg
	  (iseq_build_from_ary_body): update for r35459